# interior_design

./: .gitignore  Procfile  README.md  asset-manifest.json  db.sqlite3  index.html  manage.py  package-lock.json  requirements.txt
app/interior_design/: asgi.py  wsgi.py
app/main/: views.py
backend/: requirements.txt
backend/interior_design/: db.sqlite3  pyproject.toml  requirements.txt
backend/interior_design/interior_design/: requirements.txt  settings.py  urls.py
backend/interior_design/main/: secret_settings.py  serializers.py  views.py
backend/interior_design/main/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: FrontendApi.js  index.js
frontend/src/api/: ApiService.js  ClientImg.js  CreateUserApi.js  FrontendApi.js  HealthCheck.js  RandomImgApi.js
frontend/src/auth/: JwtToken.js
frontend/src/base/: Dev.js  Footer.js  Home.js  HomePage.js
frontend/src/nav/: AppRoutes.js  (+1 more)
interior_design/: secret_key.txt  settings.py  urls.py
main/: admin.py  models.py
static/css/: main.cdff24bf.css
static/js/: main.21e59840.js  main.21e59840.js.LICENSE.txt  main.21e59840.js.map  main.3b3ba5d4.js  main.3b3ba5d4.js.map  main.446ee419.js.map  main.5724cf11.js.map  main.6544837f.js.map  main.6de7290d.js.map  main.90e289a1.js  main.919b14ea.js  main.919b14ea.js.map  main.99cfa2e5.js  main.9f02669c.js.map  main.a89cfea1.js  main.a89cfea1.js.map  main.ab07dfce.js  main.bbe17208.js  main.bbe17208.js.map  main.bce1ea0f.js  main.bce1ea0f.js.map  main.bf6cfc4b.js  main.bf6cfc4b.js.map  main.c672202e.js.map  main.d706e277.js.map
(+13 files in other folders)
