[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-project"
version = "1.0.0"
description = "A Python project"
authors = ["Your Name <your-email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
asgiref = "==3.7.1"
certifi = "==2023.5.7"
charset-normalizer = "==3.1.0"
Django = "==3.2.19"
django-cors-headers = "==4.0.0"
djangorestframework = "==3.14.0"
idna = "==3.4"
Pillow = "==9.5.0"
pytz = "==2023.3"
requests = "==2.31.0"
sqlparse = "==0.4.4"
typing_extensions = "==4.6.2"
tzdata = "==2023.3"
urllib3 = "==2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
